--- a/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
@@ -33,7 +33,7 @@
                     {{ form_label(form.start) }}
                     {{ form_errors(form.start) }}
                     <div class='input-group date' id='datetimepicker1'>
-                        {{ form_widget(form.start, {'attr': {'class': 'form-control' ,'data-date-format': 'DD/MM/YYYY hh:mm A/PM'}}) }}
+                        {{ form_widget(form.start, {'attr': {'class': 'form-control' ,'data-date-format': 'DD/MM/YYYY HH:mm'}}) }}
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                         </span>
                     </div>
@@ -47,7 +47,7 @@
                     {{ form_label(form.stop) }}
                     {{ form_errors(form.stop) }}
                     <div class='input-group date' id='datetimepicker2'>
-                        {{ form_widget(form.stop, {'attr': {'class': 'form-control' ,'data-date-format': 'DD/MM/YYYY hh:mm A/PM'}}) }}
+                        {{ form_widget(form.stop, {'attr': {'class': 'form-control' ,'data-date-format': 'DD/MM/YYYY HH:mm'}}) }}
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                         </span>
                     </div>
