--- a/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
@@ -3,20 +3,32 @@
 {% block title %}List of Users{% endblock %}
 {% block body %}
 <div class="container-fluid">
+    
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="alert alert-success" role="alert">
+        {{ flashMessage }}
+        </div>
+    {% endfor %}
+            
     <div class="row">
         <div class="col-md-8">
-            <h2>List of Users</h2>
+            <h2>List of Users </h2>
             <table class="table table-hover">
+                <thead>
                     <tr>
-                        <th> Last Name </th>
-                        <th> First Name </th>
-                        <th> Username </th>
-                        <th> Role </th>
+                        <th {% if pagination.isSorted('u.lastName') %} class="sorted"{% endif %}>
+                            {{ knp_pagination_sortable(pagination, 'Last Name', 'u.lastName', {'direction': 'desc'}) }}
+                        </th>
+                        <th> {{ knp_pagination_sortable(pagination, 'First Name', 'u.firstName') }} </th>
+                        <th> {{ knp_pagination_sortable(pagination, 'Username', 'u.username') }} </th>
+                        <th> {{ knp_pagination_sortable(pagination, 'Role', 'r.role') }}</th>
                         <th> </th>
                     </tr>
-                    
-                    {% for u in users %}
-                        <tr>
+                </thead>
+                
+                <tbody>
+                    {% for u in pagination %}
+                        <tr {% if loop.index is odd %}class="color"{% endif %}>
                             <td> {{u.lastName}} </td>
                             <td> {{ u.firstName }} </td>
                             <td> {{ u.username }} </td>                            
@@ -25,10 +37,18 @@
                             <td> <a href="{{ path('user_edit', {'userId': u.id }) }}"> Edit </a></td>
                         </tr>
                     {% endfor %}
+                </tbody>
             </table>
+            
+            {# display navigation #}
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
         <div class="col-md-6"></div>
     </div>
 </div>
 {% endblock %}
+
+
  
