--- a/src/School/UserBundle/Resources/views/Form/form_errors.html.twig
+++ b/src/School/UserBundle/Resources/views/Form/form_errors.html.twig
@@ -1,7 +1,7 @@
 {% block form_errors -%}
     {% if errors|length > 0 -%}
         {%- for error in errors -%}
-            <div class="alert alert-danger" role="alert"> {{ error.message }} </div>
+            <span class="text-danger">{{ error.message }} </span>
         {%- endfor -%}
     {%- endif %}
 {%- endblock form_errors %}
