--- a/src/School/UserBundle/Resources/views/Login/homepage.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/homepage.html.twig
@@ -1,6 +1,14 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
-<h3>Welcome to the Homepage!</h3>
+<div class="container-fluid">
+    <h3>Welcome to the Homepage! </h3>
+    
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="alert alert-success" role="alert">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
