--- a/src/School/UserBundle/Resources/views/Student/StudentProfile.html.twig
+++ b/src/School/UserBundle/Resources/views/Student/StudentProfile.html.twig
@@ -1,5 +1,10 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
+{% block header_javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="{{ asset('bundles/schooluser/vendor/bootstrap/js/tab.js') }}"> </script>
+{% endblock %}
+
 {% block title %} My Profile {% endblock %}
 
 {% block body %}
@@ -26,6 +31,27 @@
             {% endif %}
         </ul>
         
-       
+        <ul class="nav nav-tabs" role="tablist" id="myTab">
+            <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
+            <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
+            <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
+            <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div class="tab-pane active" id="home">...</div>
+            <div class="tab-pane" id="profile">...</div>
+            <div class="tab-pane" id="messages">...</div>
+            <div class="tab-pane" id="settings">...</div>
+        </div>
+        
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $(function () {
+        $('#myTab a:last').tab('show')
+    })
+    </script>
 {% endblock %}
