--- a/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
@@ -1,14 +1,15 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
-{% block title %}Teacher Homepage{% endblock %}
+{% block title %}Courses{% endblock %}
 
 
 {% block body %}
-    <h3> Assigned courses for {{ app.user.lastName }} {{ app.user.firstName }} </h3>
+<div class="container-fluid">
+    <h3> Courses </h3>
  
     <ul>
     {% for course in courses %}
-        <li> {{ course.name }}  <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}"> (Add Lecture) </a>  </li>
+        <li> {{ course.name }} - {{ course.schoolYear }} <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}"> (Add Lecture) </a>  </li>
             <ul> 
             {% for lecture in  course.lectures %}
                 <li>   <a href="{{ asset(lecture.getWebPath()) }}"> {{ lecture }} </a></li>
@@ -16,5 +17,5 @@
             </ul>
     {% endfor %}
     </ul>
-    
+</div>   
 {% endblock %}
