--- a/src/School/UserBundle/Resources/views/Teacher/LoadStudents.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/LoadStudents.html.twig
@@ -2,33 +2,43 @@
 
 {% block title %} Students {% endblock %}
 
+{% block header_javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="{{ asset('bundles/schooluser/vendor/bootstrap/tab.js') }}"></script>
+{% endblock %}
+
 {% block body %}
 <div class="container-fluid">
             
-    <h3> Students By Class</h3>
+    <h3> Students </h3>
     
-    
-    <div class="panel-group" id="accordion">
-        {% for school_class in classes %}           
-            <div class="panel panel-default">
-                
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#{{ school_class.id}}">
-                        {{ school_class.name }}
-                        </a>
-                    </h4>
-                </div>
-            
-                <div id="{{ school_class.id}}" class="panel-collapse collapse">
-                    {% for student in school_class.students %}
-                        <div class="panel-body">   
-                            <a href="{{ path('teacher_student_profile', {'student_id': student.id }) }}"> {{ student.user.lastName }} {{ student.user.firstName }} </a>
-                        </div>
-                    {% endfor %}            
-            </div>
+    <ul class="nav nav-tabs" role="tablist" id="myTab">
+        {% for school_class in classes %}
+        <li ><a href="#{{ school_class.id }}" role="tab" data-toggle="tab"> {{ school_class.name }}</a></li>
         {% endfor %}
+    </ul>
+   
+    <div class="tab-content">
+    {% for school_class in classes %}
+        <div class="tab-pane fade" id="{{ school_class.id }}"> 
+            <ul class="list-group">
+            {% for student in school_class.students %} 
+                <li class="list-group-item"> {{ student.user.lastName }} {{ student.user.firstName }} </li>  
+            {% endfor %} 
+            </ul>
+        </div>
+    {% endfor %}
     </div>
+
   
 </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        $(function () {
+            $('#myTab a:first').tab('show')
+        })
+    </script>
 {% endblock %}
