--- a/src/School/UserBundle/Resources/views/base.html.twig
+++ b/src/School/UserBundle/Resources/views/base.html.twig
@@ -20,7 +20,8 @@
         
     </head>
     <body>
-        {% block menu %}        
+        {% block menu %}  
+            
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,7 +32,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Second Chance Schools</a>
+                            <a class="navbar-brand" href="{{ path('homepage') }}">Second Chance Schools</a>
                         </div>
     
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
