--- a/src/School/UserBundle/Resources/views/Login/homepage.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/homepage.html.twig
@@ -1,14 +1,92 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
-<div class="container-fluid">
-    <h3>Welcome to the Homepage! </h3>
+<div class="container">
+
+    <h3> Adult Education Programs </h3>
+ 
+    <div id="carousel-homepage" class="carousel slide"  style="margin-bottom: 60px">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-homepage"  class="active"></li>
+            <li data-target="#carousel-homepage" ></li>
+            <li data-target="#carousel-homepage" ></li>
+        </ol>
+ 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ asset('bundles/schooluser/images/education1.jpg') }}" alt="...">
+                <div class="carousel-caption">
+                    <h3> Giving people a second chance in education.  </h3>
+                </div>
+            </div>
+            
+            <div class="item">
+                <img src="{{ asset('bundles/schooluser/images/education2.jpg') }}" alt="...">
+                <div class="carousel-caption">
+                    <h3> </h3>
+                </div>
+            </div>
+            
+            <div class="item">
+                <img src="{{ asset('bundles/schooluser/images/education5.png') }}" alt="...">
+                <div class="carousel-caption">
+                    <h3 ></h3>
+                </div>
+            </div>
+        </div>
+ 
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-homepage" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div> <!-- Carousel -->
+        
     
-    {% for flashMessage in app.session.flashbag.get('notice') %}
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title"> News </h3>
+                </div>
+                <div class="panel-body">
+                    
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-8">
+            
+            <p> The institution of <strong> Second Chance Schools </strong> has been developed as an effort to combat the social exclusion of adults who have not finished basic education and do not have the necessary qualifications and skills to adapt to modern vocational requirements. Young people aged between 18 and 30 who have dropped out of school are now able to complete their compulsory 9-year education.
+            </p>
+            <p> Special, intensive primary and lower secondary school courses are run at Second Chance Schools and graduates are issued with a leaving certificate equivalent to that of the Primary and Lower Secondary School leaving certificate. This entitles them to register with the Unified Lyceum, Technical Vocational Educational Institutes and post-gymnasium IEK and to attend certain vocational training courses.
+            </p>
+        
+        
+            <p> The course lasts 18 months with 20 hours of class per week held in the evening. A necessary condition is that candidates reside in prefectures where Second Chance Schools operate.
+            </p>
+            <p> Today there are 5 Second Chance Schools in operation, in Athens (Peristeri, Menidi), Patra, Thessaloniki and Heraklion-Crete, and in the future there are plans to establish other similar schools. Second Chance Schools are established following a recommendation from the Institute of Continuing Adult Education (IDEKE) in collaboration with the competent local government authorities in order to ensure the proper conditions for running such schools.
+            </p>
+        </div>
+    </div>
+
+    {# {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-success" role="alert">
             {{ flashMessage }}
         </div>
-    {% endfor %}
+    {% endfor %} #}
 </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.carousel-homepage').carousel()  ;
+        });
+    </script>
 {% endblock %}
