--- a/src/School/UserBundle/Resources/views/Admin/AddUser.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/AddUser.html.twig
@@ -1,6 +1,7 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
+{{ parent() }}
 <h2> Add new user</h2>
     {{ form_start(form) }}
     
