--- a/src/School/UserBundle/Resources/views/Admin/StudentRemovalSelection.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/StudentRemovalSelection.html.twig
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block body %}
+{{ parent() }}
 <div class="container-fluid">
     <h2> Remove students from class </h2> <br/>
     
