--- a/src/School/UserBundle/Resources/views/Login/homepage.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/homepage.html.twig
@@ -1,6 +1,7 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
+{{ parent() }}
 <div class="container">
 
     <h3> Adult Education Programs </h3>
